@@ -4,6 +4,10 @@ Changelog
 1.1.3 - unreleased
 ------------------
 
+* Fixed Error for already existing uuid while
+  copy and pasting dexterity container which has ATContentTypes inside it.
+  [taito]
+
 1.1.2 - 2012-02-20
 ------------------
 
@@ -34,7 +38,7 @@ Changelog
   http://code.google.com/p/dexterity/issues/detail?id=240
   [davisagli]
 
-* Added events: IEditBegunEvent, IEditCancelledEvent, IEditFinished, 
+* Added events: IEditBegunEvent, IEditCancelledEvent, IEditFinished,
   IAddBegunEvent, IAddCancelledEvent
   [jbaumann]
 
